--- a/Módulo_3/Módulo3Katas.ipynb
+++ b/Módulo_3/Módulo3Katas.ipynb
@@ -41,13 +41,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "!!!Alerta!!! asteroide acercándose a gran velocidad:  49 km/s\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
+        "vel_asteroide = 49\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "if vel_asteroide > 25: \n",
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "    print('!!!Alerta!!! asteroide acercándose a gran velocidad: ', vel_asteroide, 'km/s')"
       ]
     },
     {
@@ -59,13 +70,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nada que ver en el cielo por hoy\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
+        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
+        "vel_asteroide = 19\n",
+        "if vel_asteroide > 20:\n",
+        "    print('Mira al cielo!! va a pasar una estrella fugaz!')\n",
+        "elif vel_asteroide == 20:\n",
+        "    print('Mira al cielo!!va a pasar una estrella fugaz!')\n",
+        "else: \n",
+        "    print('Nada que ver en el cielo por hoy')"
       ]
     },
     {
@@ -99,13 +125,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Asteroide de 20m acercádonse a 5km/s\n",
+            "Cielo despejado\n",
+            "\n",
+            "Asteroide de 26m acercádonse a 20km/s\n",
+            "Mira al cielo!! va a pasar una estrella fugaz!\n",
+            "\n",
+            "Asteroide de 1001m acercádonse a 25km/s\n",
+            "Mira al cielo!! va a pasar una estrella fugaz!\n",
+            "\n",
+            "Asteroide de 50m acercádonse a 30km/s\n",
+            "!!!Peligro!!! un gran asteroide se acerca a la Tierra a gran velocidad!!!\n",
+            "\n",
+            "Asteroide de 1001m acercádonse a 30km/s\n",
+            "!!!Peligro!!! un gran asteroide se acerca a la Tierra a gran velocidad!!!\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
+        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
+        "vel_asteroide = [5, 20, 25, 30, 30]\n",
+        "tamaño_asteroide = [20, 26, 1001, 50, 1001]\n",
+        "\n",
+        "for vel, tamaño in zip(vel_asteroide, tamaño_asteroide):\n",
+        "    print('Asteroide de '+ str(tamaño) + 'm acercádonse a '+ str(vel) + 'km/s')\n",
+        "    if vel > 25 and tamaño > 25:\n",
+        "        print('!!!Peligro!!! un gran asteroide se acerca a la Tierra a gran velocidad!!!\\n')\n",
+        "    elif vel >= 20:\n",
+        "        print('Mira al cielo!! va a pasar una estrella fugaz!\\n')\n",
+        "    elif tamaño < 25:\n",
+        "        print('Cielo despejado\\n')\n",
+        "    else:\n",
+        "        print('Cielo despejado\\n')\n",
+        "    "
       ]
     },
     {
@@ -231,7 +293,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
