--- a/Módulo_4/Módulo4Katas.ipynb
+++ b/Módulo_4/Módulo4Katas.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -306,15 +306,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Nueva plantilla\n",
-        "nuevo_texto = \"\"\"Gravity Facts about {nombre}\n",
+        "nuevo_texto = \"\"\"Gravity Facts about {name}\n",
         "-------------------------------------------------------------------------------\n",
-        "Planet Name: {planeta}\n",
-        "Gravity on Ganymede: {gravedad} m/s2\"\"\""
+        "Planet Name: {planet}\n",
+        "Gravity on Ganymede: {gravity} m/s2\"\"\""
       ]
     },
     {
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -342,7 +342,7 @@
       ],
       "source": [
         "# Pista: print(nueva_plantilla.format(variables))\n",
-        "print(nuevo_texto.format(nombre=nombre, planeta=planeta, gravedad=gravedad*1000))"
+        "print(nuevo_texto.format(name=nombre, planet=planeta, gravity=gravedad*1000))"
       ]
     },
     {
@@ -361,9 +361,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Interesting facts about the Moon',\n",
+              " \"The Moon is Earth's only satellite\",\n",
+              " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+              " '\\nOn average, the Moon moves 4cm away from the Earth every year',\n",
+              " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+              " 'The highest daylight temperature of the Moon is 127 C.']"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Divide el texto\n",
         "text_parts = text.split('. ')\n",
@@ -372,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -382,9 +398,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 C.\n"
+          ]
+        }
+      ],
       "source": [
         "# Ciclo for para recorrer la cadena\n",
         "for sentence in text_parts:\n",
@@ -396,9 +422,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 Celsius.\n"
+          ]
+        }
+      ],
       "source": [
         "# Ciclo para cambiar C a Celsius\n",
         "for sentence in text_parts:\n",
@@ -417,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -430,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -440,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -453,9 +489,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Unión de ambas cadenas\n",
         "template = f\"\"\"{title.title()} \n",
@@ -466,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -478,9 +525,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprobamos la plantilla\n",
         "print(hechos)"
@@ -488,9 +546,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 0.00143 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "new_template = \"\"\"\n",
         "Datos de Gravedad sobre: {nombre}\n",
@@ -503,9 +574,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Pista: print(nueva_plantilla.format(variables))\n",
         "print(new_template.format(nombre=nombre, planeta=planeta, gravedad=gravedad*1000))"
